2022-08-28T16:29:51Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2943744875
* notice: last 14d: unq all: 13 35
* notice: prev accum: outdated-unq outdated-all / unq all: 282 446 / 304 480
* notice: next accum: outdated-unq outdated-all / unq all: 282 446 / 305 481
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-08-28]

2022-08-28T02:34:58Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2941453586
* notice: last 14d: unq all: 13 34
* notice: prev accum: outdated-unq outdated-all / unq all: 282 446 / 304 479
* notice: next accum: outdated-unq outdated-all / unq all: 282 446 / 304 480
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2022-08-27]

2022-08-27T16:29:27Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2939913350
* notice: last 14d: unq all: 13 33
* notice: prev accum: outdated-unq outdated-all / unq all: 282 446 / 304 478
* notice: next accum: outdated-unq outdated-all / unq all: 282 446 / 304 479
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-08-27]

2022-08-27T08:27:27Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2938597426
* notice: last 14d: unq all: 13 32
* notice: prev accum: outdated-unq outdated-all / unq all: 282 446 / 303 477
* notice: next accum: outdated-unq outdated-all / unq all: 282 446 / 304 478
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-08-27]

2022-08-27T02:27:28Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2937671639