@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-28T16:29:51Z",
+  "timestamp" : "2022-08-29T08:29:00Z",
   "count_outdated" : 446,
   "uniques_outdated" : 282,
-  "count" : 481,
-  "uniques" : 305,
+  "count" : 482,
+  "uniques" : 306,
   "clones" : [
     {
       "timestamp": "2022-08-17T00:00:00Z",
@@ -70,6 +70,13 @@
     },
     {
       "timestamp": "2022-08-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-29T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
