@@ -1,3 +1,11 @@
+2022-08-29T08:29:00Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2947057872
+* notice: last 14d: unq all: 13 36
+* notice: prev accum: outdated-unq outdated-all / unq all: 282 446 / 305 481
+* notice: next accum: outdated-unq outdated-all / unq all: 282 446 / 306 482
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-29]
+
 2022-08-28T16:29:51Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2943744875
 * notice: last 14d: unq all: 13 35
